--- a/sic/templates/comment.html
+++ b/sic/templates/comment.html
@@ -117,9 +117,9 @@
         {% endif %}
         <div class="replies">
             {% if comment.replies.exists and not shallow and not delete_comment %}
-                <ul class="posts">
+                <ul class="posts" style="--level: {{ level }}">
                     {% for reply in comment.replies.all %}
-                        {% include "comment.html" with comment=reply edit_comment_pk=edit_comment_pk edit_comment_form=edit_comment_form %}
+                        {% include "comment.html" with comment=reply edit_comment_pk=edit_comment_pk edit_comment_form=edit_comment_form level=level|add:"1" %}
                     {% endfor %}
                 </ul>
             {% endif %}
