Show (text) instead of domain for text posts

--- a/sic/templates/story.html
+++ b/sic/templates/story.html
@@ -21,7 +21,7 @@
                     {{story.karma}}
                 </div>
             </div>
-            <h1 class="story-title"><a href="{{story.get_listing_url}}">{{ story.title }}</a>{% with story.get_domain as domain %}{% if domain %} <span class="netloc">{{ domain }}</span>{% endif %}{% endwith %}</h1>
+            <h1 class="story-title"><a href="{{story.get_listing_url}}">{{ story.title }}</a>{% with story.get_domain as domain %} <span class="netloc">{{ domain|default_if_none:"text" }}</span>{% endwith %}</h1>
             {% if story.publish_date %}<span>Published: <time datetime="{{ story.publish_date | date:"Y-m-d" }}" title="{{ story.publish_date }}">{{ story.publish_date|naturalday }}</time></span>{% endif %}
             {% include "story_tags.html" with tags=story.tags.all %}
             {% if not story.tags.exists and request.user == story.user %}
