--- a/sic/templates/story_list_item.html
+++ b/sic/templates/story_list_item.html
@@ -19,7 +19,7 @@
         </div>
         <div class="title">
             <a href="{{story.get_listing_url}}" class="title">{{ story.title }}</a>
-            {% with story.get_domain as domain %}{% if domain %}<span class="netloc">{{ domain }}</span>{% endif %}{% endwith %}
+            {% with story.get_domain as domain %}<span class="netloc">{{ domain|default_if_none:"text" }}</span>{% endwith %}
             {% if story.publish_date %}<span>Published: <time datetime="{{ story.publish_date | date:"Y-m-d" }}" title="{{ story.publish_date }}">{{ story.publish_date|naturalday }}</time></span>{% endif %}
             {% include "story_tags.html" with tags=story.tags.all %}
             {% if DEBUG %}
