--- a/sic/templates/comment.html
+++ b/sic/templates/comment.html
@@ -39,15 +39,13 @@
                 {% if comment.last_log_entry %}
                     <time datetime="{{ comment.last_log_entry.action_time | date:"Y-m-d H:i:s" }}" title="{{ comment.last_log_entry.action_time }}">- Edited {{ comment.last_log_entry.action_time|naturaltime }}</time>
                 {%endif%}
-                {%if not edit_comment_pk %}
-                    | <a href="{{comment.get_absolute_url}}">link</a>
-                    | <label class="reply" for="reply-{{comment.pk}}"><a href="">reply</a></label>{% if show_story %} | on <a href="{{ comment.story.get_absolute_url }}">{{ comment.story.title }}</a>{% endif %}
-                    | <a href="{% url 'comment_source' comment.story.pk 'test' comment.pk %}">source</a>
-                    {% if request.user.is_authenticated %}
-                        {%if request.user == comment.user or request.user.is_moderator %}
-                            | <a href="{% url 'edit_comment' comment.pk %}">edit</a>
-                            | <a href="{%url 'delete_comment' comment.pk %}">delete</a>
-                        {% endif %}
+                | <a href="{{comment.get_absolute_url}}">link</a>
+                | <label class="reply" for="reply-{{comment.pk}}"><a href="">reply</a></label>{% if show_story %} | on <a href="{{ comment.story.get_absolute_url }}">{{ comment.story.title }}</a>{% endif %}
+                | <a href="{% url 'comment_source' comment.story.pk 'test' comment.pk %}">source</a>
+                {% if request.user.is_authenticated %}
+                    {%if request.user == comment.user or request.user.is_moderator %}
+                        | <a href="{% url 'edit_comment' comment.pk %}">edit</a>
+                        | <a href="{%url 'delete_comment' comment.pk %}">delete</a>
                     {% endif %}
                 {% endif %}
 
@@ -58,66 +56,30 @@
             <span class="comment">{{ comment.text_to_html }}</span>
             {% if request.user.is_authenticated %}
                 <input class="reply" type="checkbox" id="reply-{{comment.pk}}" name="reply-{{comment.pk}}"
-                    {% if preview or edit_comment_pk == comment.pk %}checked="checked"{% endif %}>
-                {% if not delete_comment %}
-                    {% if edit_comment_pk == comment.pk %}
-                        <form action="{% url 'edit_comment' comment.pk %}" method="POST" class="reply-form">
-                    {% else %}
-                        <form action="{% url 'reply' comment.pk %}" method="POST" class="reply-form">
-                            <label class="reply" for="reply-{{comment.pk}}" style="align-self: end; position: absolute;"><a href="">hide</a></label>
-                            <span class="reply-parent">
-                                <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a> <time datetime="{{ comment.created | date:"Y-m-d H:i:s" }}" title="{{ comment.created }}"> {{ comment.created|naturaltime }}</time>
-                                <span class="comment">{{ comment.text_to_html }}</span>
-                            </span>
-                    {% endif %}
+                    {% if preview %}checked="checked"{% endif %}>
+                <form action="{% url 'reply' comment.pk %}" method="POST" class="reply-form">
+                    <label class="reply" for="reply-{{comment.pk}}" style="align-self: end; position: absolute;"><a href="">hide</a></label>
+                    <span class="reply-parent">
+                        <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a> <time datetime="{{ comment.created | date:"Y-m-d H:i:s" }}" title="{{ comment.created }}"> {{ comment.created|naturaltime }}</time>
+                        <span class="comment">{{ comment.text_to_html }}</span>
+                    </span>
                     {% csrf_token %}
                     <input type="text" name="preview_comment_pk" value="{{comment.pk}}" hidden>
                     {% if preview %}
                         <span>Preview:</span>
                         <span class="comment preview">{{ preview }}</span>
                     {% endif %}
-                    {% if ongoing_reply_pk == comment.pk %}
-                        {% for field in ongoing_reply_form %}
-                            {{ field.errors }}
-                            {{ field.label_tag }}
-                            {{ field }}
-                        {% endfor %}
-                    {% elif edit_comment_pk == comment.pk %}
-                        {% for field in edit_comment_form %}
-                            {{ field.errors }}
-                            {{ field.label_tag }}
-                            {{ field }}
-                        {% endfor %}
-                    {% else %}
-                        {% for field in reply_form %}
-                            {{ field.errors }}
-                            {{ field.label_tag }}
-                            {{ field }}
-                        {% endfor %}
-                    {% endif %}
+                    <label for="reply-{{comment.pk}}-textarea">reply</label>
+                    <textarea id="reply-{{comment.pk}}-textarea" name="text" cols="40" rows="3" minlength="1" placeholder="" required="">{{ preview_input }}</textarea>
                     <div class="button-flex-box">
-                        {% if edit_comment_pk != comment.pk %}
-                            <input formaction="." type="submit" name="preview" value="Preview">
-                            <input type="submit" value="Submit">
-                        {% else %}
-                            &nbsp;
-                            <input type="submit" value="Save">
-                        {% endif %}
+                        <input formaction="{% url_with_next 'preview_comment' request %}" type="submit" name="preview" value="Preview">
+                        <input type="submit" value="Submit">
                         <details class="formatting-help">
                             <summary>Formatting help</summary>
                             <span>{% include "markdown_help.html" %}</span>
                         </details>
                     </div>
-                    </form>
-                {% else %}
-                    <form action="{% url 'delete_comment' edit_comment_pk %}" method="POST" class="delete-comment-form">
-                        {% csrf_token %}
-                        <table>
-                            {{ delete_comment_form }}
-                        </table>
-                        <input type="submit" value="Permanently Delete">
-                    </form>
-                {% endif %}
+                </form>
             {% endif %}
         {% endif %}
         <div class="replies">
