--- a/sic/templates/submit.html
+++ b/sic/templates/submit.html
@@ -1,10 +1,16 @@
 {% extends "base.html" %}
 {% load humanize %}
-{% block title %}submit story{% endblock %}
+{% block title %}{% if story %}edit story - {{ story.title }}{% else %}submit story{% endif %}{% endblock %}
 {% block content %}
-    <h1>submit story</h1>
+    {% if story %}
+        <h1>edit story</h1>
+    {% else %}
+        <h1>submit story</h1>
+    {% endif %}
     <p class="help-text">A story can have no <code>url</code>; in that case, the story content is what you put in the description.</p>
-    <p class="help-text">You can edit your story after submission to add missing tags or correct mistakes.</p>
+    {% if not story %}
+        <p class="help-text">You can edit your story after submission to add missing tags or correct mistakes.</p>
+    {% endif %}
     <form method="post" class="submit-story-form">
         {% if preview %}
             <span>Preview:</span>
