markdown.py: add auto user links

--- a/sic/templates/markdown_help.html
+++ b/sic/templates/markdown_help.html
@@ -185,5 +185,14 @@
                 </div>
             </td>
         </tr>
+        <tr>
+            <td class="preformatted">
+                &lt;/u/user&gt;
+            </td>
+            <td class="preformatted second-example">
+                &nbsp;
+            </td>
+            <td><a href="/u/user">/u/user</a></td>
+        </tr>
     </tbody>
 </table>
