--- a/sic/templates/all_stories.html
+++ b/sic/templates/all_stories.html
@@ -3,6 +3,17 @@
 {% load utils %}
 {% block title %}All stories - sic{% endblock %}
 {% block content %}
+    <nav>
+        <ul>
+            <li><form method="get" class="order-by-form">
+                {% for f in order_by_form %}
+                    {{ f.label_tag }}
+                    {{ f }}
+                {% endfor %}
+                <input type="submit" value="sort">
+            </form></li>
+        </ul>
+    </nav>
     <ul class="posts">
         {% for story in stories %}
             {% include "story_list_item.html" with story=story %}
