--- a/sic/templates/about.html
+++ b/sic/templates/about.html
@@ -40,6 +40,7 @@
             <li><a href="{% url 'about_privacy' %}">Privacy Policy</a></li>
             <li><a href="{% url 'invitation_tree' %}">User invitation tree</a></li>
             <li>IRC Channel: <code>#sic</code> on <a href="https://libera.chat/" rel="external nofollow">Libera Chat</a>, connect with an IRC client at <a href="ircs://irc.libera.chat:6697" rel="external nofollow"><code>ircs://irc.libera.chat:6697</code></a>, use a <a href="https://web.libera.chat/?channel=#sic">webclient</a> or the <a href="https://app.element.io/#/room/#sic:libera.chat" rel="external nofollow">Matrix bridge</a>.</li>
+            <li>tor hidden service <a href="http://sicpm3hp7dtrwhmf4qlelycqlvie6flqa5qnjnt3snok5xydvxhs4xyd.onion/">http://sicpm3hp7dtrwhmf4qlelycqlvie6flqa5qnjnt3snok5xydvxhs4xyd.onion/</a></li>
             <li>Source code: <a href="https://github.com/epilys/sic/">https://github.com/epilys/sic/</a></li>
         </ul>
     </nav>
