Add aggregation frontpage view and easier navigation

--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -54,6 +54,7 @@
                         <li><a href="{% url 'index' %}" id="home_link">Home</a></li>
                         <li><a href="{% url 'all_stories' %}" id="all_stories_link">All stories</a></li>
                         <li><a href="{% url 'recent_comments' %}" id="recent_comments_link">Comments</a></li>
+                        <li><a href="{% url 'public_aggregations' %}" id="aggregations_link">Aggregations</a></li>
                         <li><a href="{% url 'browse_tags' %}" id="browse_tags_link">Tags</a></li>
                         <li><a href="{% url 'search' %}" id="search_link">Search</a></li>
                     </ul>
