Add graph svg view
Put svg renderer in a view so we can cache it.

--- a/sic/templates/tag_graph.html
+++ b/sic/templates/tag_graph.html
@@ -3,5 +3,5 @@
 {% load utils %}
 {% block title %}tag graph - sic{% endblock %}
 {% block content %}
-    {{ svg }}
+    <img src="{% url 'tag_graph_svg' %}">
 {% endblock %}
