--- a/sic/templates/comment.html
+++ b/sic/templates/comment.html
@@ -3,6 +3,7 @@
 
 {% get_comment_preview request comment.pk as preview %}
 {% comment_is_upvoted as is_upvoted %}
+{% comment_is_downvoted as is_downvoted %}
 <li class="comment{% if not comment.replies.exists %} no-children{% endif %}" id="{{comment.slugify}}">
     {% spaceless %}
         {%if comment.deleted %}
@@ -31,6 +32,14 @@
                         </form>
                     {% endif %}
                 </span>
+                {% if request.user.is_authenticated and request.user.can_downvote %}
+                <span class="downvote{% if is_downvoted %} downvoted{% endif %}">
+                        <form action="{% url_with_next 'downvote_comment' comment.story.pk comment.story.slugify comment.pk request %}" method="POST">
+                            {% csrf_token %}
+                            <input type="submit" title="downvote comment" value="">
+                        </form>
+                </span>
+                        {% endif %}
                 <span class="score">
                     {{comment.karma}}
                 </span>
